2008-04-15  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/actor.hg: add default value of 'true' to Actor::set_reactive()

2008-04-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm-1.0.pc.in: require 'clutter-0.6' in the .pc file instead
	of 'clutter'

2008-04-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/cluttermm.h:
	* clutter/src/Makefile_list_of_hg.am_fragment:
	* clutter/src/cairo-texture.ccg:
	* clutter/src/cairo-texture.hg:
	* clutter/src/clutter_methods.defs:
	* examples/Makefile.am:
	* examples/flowers.cc:
	* examples/simple-cairo.cc:
	* examples/test-actors.cc: add support for the clutter-cairo library.
	Currently this is required unconditionally, I'm not sure if we want to wrap
	this in a separate library (e.g. cluttermm-cairo) since the underlying
	libraries are separate.

0.5.0:

2008-02-21  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Depend on clutter-0.6 instead of clutter-0.5.
	* clutter/src/clutter_methods.defs: Regenereated with h2defs.py.

	* clutter/src/clutter_vfuncs.defs:
	* clutter/src/stage.hg: Remove set_offscreen() vfunc because it was 
	removed from clutter.

	* clutter/src/entry.hg: Renamed set_position() to set_cursor_position(), 
	to match the change in clutter.

2008-01-26  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/script.hg:
	* clutter/src/shader.hg: Do not use _DERIVES_INITIALLY_UNOWNED, because I 
	do not think they do.

2008-01-26  Murray Cumming  <murrayc@murrayc.com>

	* clutter/src/score.hg: Do not use _DERIVES_INITIALLY_UNOWNED, because I 
	do not think it does.
	get_timeline(): Use refreturn. 
	* clutter/src/script.hg: Wrap clutter_get_script_id() as a static method.
	* clutter/src/scriptable.hg: Wrap the get_id() vfunc.
	* clutter/src/shader.ccg:
	* clutter/src/shader.hg: Use std::string for the source code (data) parameters.
	* clutter/src/stage.hg: Added default values for set_*(bool) methods.

2008-01-26  Murray Cumming  <murrayc@murrayc.com>
