@@ -4,10 +4,10 @@ EXTRA_DIST	= README					\
 		  cluttermmconfig.h.in cluttermm.h	\
 		  cluttermm-1.0.pc.in
 
-cluttermm_includedir		= $(includedir)/cluttermm-0.1
+cluttermm_includedir		= $(includedir)/$(CLUTTERMM_API_VER)
 cluttermm_include_HEADERS	= cluttermm.h
 
-cluttermm_configdir		= $(libdir)/cluttermm-0.1/include
+cluttermm_configdir		= $(libdir)/$(CLUTTERMM_API_VER)/include
 cluttermm_config_DATA	= cluttermmconfig.h
 
 pkgconfigdir		= $(libdir)/pkgconfig
